# capitallens

./: pyproject.toml
app/: main.py
app/config/: database.py  settings.py
app/models/: __init__.py  investment.py  savings.py  savings_contribution.py  transaction.py  user.py
app/routes/: analytics.py  auth.py  chat.py  investment.py  savings.py
app/schemas/: investment.py  savings.py
app/services/: ai.py  ai_chat.py  cas_parser.py  market_data.py
app/utils/: security.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: AddTransactionModal.jsx  AnalyticsTab.jsx  AuthPage.jsx  ChatAssistant.jsx  Header.jsx  Investments.jsx  LandingPage.jsx  Logo.jsx  MetricsGrid.jsx  QuickActionDock.jsx  RecentCommandLogs.jsx  SavingsGoals.jsx  SettingsTab.jsx  Sidebar.jsx  SpendMix.jsx  TransactionsManager.jsx  WealthGrowthChart.jsx
frontend/src/context/: AuthContext.jsx  CurrencyContext.jsx
frontend/src/pages/: Login.jsx  Register.jsx  dashboard.jsx  test
frontend/src/services/: api.js
frontend/src/styles/: Dashboard.css
